--- a/index.html
+++ b/index.html
@@ -1,11 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style/index.css">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <header>
+        <nav class="top">
+            <div class="name">
+                <h2>Alexandria Duell</h2>
+            </div>
+            <div class="buttons">
+                <a href="index.html">Home</a>
+                <a href="about.html">About</a>
+                <a href="projects.html">Projects</a>
+                <a href="contact.html">Contact</a>
+            </div>
+        </nav>
+    </header>
+
+    <section id="name">
+        <div>
+            <h1>Alexandria Duell</h1>
+            <h3>Software Developer</h3>
+            <p>Projects</p>
+        </div>
+    </section>
+    <section id="projects">
+        <div class="all-projects">
+            <div>
+                <h3>Project Spicy</h3>
+            </div>
+            <div>
+                <h3>Project Animation</h3>
+            </div>
+            <div>
+                <h3>Animal Project</h3>
+            </div>
+            <div>
+                <h3>Plant Project</h3>
+            </div>
+            <div>
+                <h3>Resin Project</h3>
+            </div>
+            <div>
+                <h3>Weaving Project</h3>
+            </div>
+        </div>
+    </section>
+
+    <footer id="contact-info">
+        <nav class="bottom">
+            <div class="btm-btn">
+                <a href="#contact">Contact Me</a>
+            </div>
+        </nav>
+    </footer>
 </body>
+
 </html>
