--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=    <h1> ABOUT </h1>, initial-scale=1.0">
+    <link rel="stylesheet" href="style/index.css">
     <title>Document</title>
 </head>
-<body>
+<body id="contact">
+    <header>
+        <nav>
+            <div class="name">
+                <h2>Alexandria Duell</h2>
+            </div>
+            <div class="buttons">
+                <a href="index.html">Home</a>
+                <a href="about.html">About</a>
+                <a href="projects.html">Projects</a>
+                <a href="contact.html">Contact</a>
+            </div>
+        </nav>
+    </header>
     <h1> CONTACT </h1>
 </body>
 </html>
