--- a/projects.html
+++ b/projects.html
@@ -3,9 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style/index.css">
     <title>Document</title>
 </head>
-<body>
-    <h1> PROJECTS </h1>
+
+<body id="projects">
+  <header>
+    <nav>
+      <div class="name">
+        <h2>Alexandria Duell</h2>
+      </div>
+      <div class="buttons">
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="projects.html">Projects</a>
+        <a href="contact.html">Contact</a>
+      </div>
+    </nav>
+  </header>
+  <h1>Projects</h1>
 </body>
 </html>
