#2 updated HTML + CSS files

--- a/index.html
+++ b/index.html
@@ -30,25 +30,43 @@
             <p>Projects</p>
         </div>
     </section>
-    <section id="projects">
+    <section id="projects" class="md-img">
         <div class="all-projects">
-            <div>
-                <h3>Project Spicy</h3>
+            <div class="md-img island">
+                <!-- Emtpy to put image in -->
             </div>
-            <div>
-                <h3>Project Animation</h3>
+            <div class="md-img bakery">
+                <!-- Emtpy to put image in -->
             </div>
-            <div>
-                <h3>Animal Project</h3>
+            <div class="md-img tree">
+                <!-- Emtpy to put image in -->
             </div>
-            <div>
+            <div class="text">
+                <h3>Project Island</h3>
+            </div>
+            <div class="text">
+                <h3>Project Bakery</h3>
+            </div>
+            <div class="text">
+                <h3>Tree Project</h3>
+            </div>
+            <div class="md-img plant">
+                <!-- Emtpy to put image in -->
+            </div>
+            <div class="md-img travel">
+                <!-- Emtpy to put image in -->
+            </div>
+            <div class="md-img book">
+                <!-- Emtpy to put image in -->
+            </div>
+            <div class="text">
                 <h3>Plant Project</h3>
             </div>
-            <div>
-                <h3>Resin Project</h3>
+            <div class="text">
+                <h3>Travel Project</h3>
             </div>
-            <div>
-                <h3>Weaving Project</h3>
+            <div class="text">
+                <h3>Book Project</h3>
             </div>
         </div>
     </section>
