3 updated index HTML + CSS

--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
                 <!-- Emtpy to put image in -->
             </div>
             <div class="text">
-                <h3>Project Island</h3>
+                <h3> <a href="projects.html">Project Island</a> </h3>
             </div>
             <div class="text">
-                <h3>Project Bakery</h3>
+                <h3> <a href="projects.html">Project Bakery</a> </h3>
             </div>
             <div class="text">
-                <h3>Tree Project</h3>
+                <h3> <a href="projects.html">Tree Project</a> </h3>
             </div>
             <div class="md-img plant">
                 <!-- Emtpy to put image in -->
@@ -60,23 +60,25 @@
                 <!-- Emtpy to put image in -->
             </div>
             <div class="text">
-                <h3>Plant Project</h3>
+                <h3> <a href="projects.html">Plant Project</a> </h3>
             </div>
             <div class="text">
-                <h3>Travel Project</h3>
+                <h3> <a href="projects.html">Travel Project</a> </h3>
             </div>
             <div class="text">
-                <h3>Book Project</h3>
+                <h3> <a href="projects.html">Book Project</a> </h3>
             </div>
         </div>
     </section>
 
-    <footer id="contact-info">
-        <nav class="bottom">
-            <div class="btm-btn">
-                <a href="#contact">Contact Me</a>
+    <footer>
+            <div class="linkdin">
+                <p>Check out my LinkedIn Profile:</p>
+                <a href="https://www.linkedin.com/in/alexandria-duell/" target="_blank"> </a>
             </div>
-        </nav>
+            <div class="btm-btn">
+                <a href="contact.html">Contact Me</a>
+            </div>
     </footer>
 </body>
 </html>
