--- a/index.html
+++ b/index.html
@@ -32,40 +32,40 @@
     </section>
     <section id="projects" class="md-img">
         <div class="all-projects">
-            <div class="md-img island">
+            <div class="md-img island one">
                 <!-- Emtpy to put image in -->
             </div>
-            <div class="md-img bakery">
+            <div class="md-img bakery three">
                 <!-- Emtpy to put image in -->
             </div>
-            <div class="md-img tree">
+            <div class="md-img tree five">
                 <!-- Emtpy to put image in -->
             </div>
-            <div class="text">
+            <div class="text two">
                 <h3> <a href="projects.html">Project Island</a> </h3>
             </div>
-            <div class="text">
+            <div class="text four">
                 <h3> <a href="projects.html">Project Bakery</a> </h3>
             </div>
-            <div class="text">
+            <div class="text six">
                 <h3> <a href="projects.html">Tree Project</a> </h3>
             </div>
-            <div class="md-img plant">
+            <div class="md-img plant seven">
                 <!-- Emtpy to put image in -->
             </div>
-            <div class="md-img travel">
+            <div class="md-img travel nine">
                 <!-- Emtpy to put image in -->
             </div>
-            <div class="md-img book">
+            <div class="md-img book eleven">
                 <!-- Emtpy to put image in -->
             </div>
-            <div class="text">
+            <div class="text eight">
                 <h3> <a href="projects.html">Plant Project</a> </h3>
             </div>
-            <div class="text">
+            <div class="text ten">
                 <h3> <a href="projects.html">Travel Project</a> </h3>
             </div>
-            <div class="text">
+            <div class="text twelve">
                 <h3> <a href="projects.html">Book Project</a> </h3>
             </div>
         </div>
