--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <p>Projects</p>
         </div>
     </section>
+
     <section id="projects" class="md-img">
         <div class="all-projects">
             <div class="md-img island one">
@@ -77,7 +78,7 @@
                 <a href="https://www.linkedin.com/in/alexandria-duell/" target="_blank"> </a>
             </div>
             <div class="btm-btn">
-                <a href="contact.html">Contact Me</a>
+                <a href="contact.html">Contact <br> Me</a>
             </div>
     </footer>
 </body>
