--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/index.css">
-    <title>Alexandria Duell Projects</title>
+    <title>Alexandria Duell's Projects</title>
 </head>
 
 <body>
@@ -34,39 +34,39 @@
     <section id="projects" class="md-img">
         <div class="all-projects">
             <div class="md-img island one">
-                <!-- Emtpy to put image in -->
+                <img src="images/island.jpeg" alt="Island in center with blue ocean in forefront">
             </div>
-            <div class="md-img bakery three">
-                <!-- Emtpy to put image in -->
+            <div class="md-img bakery two">
+                <img src="images/building-w:-patio.jpeg" alt="Brick building with a patio">
             </div>
             <div class="md-img tree five">
-                <!-- Emtpy to put image in -->
+                <img src="images/tree.jpeg" alt="Photo of tree from ground up">
             </div>
-            <div class="text two">
+            <div class="text three">
                 <h3> <a href="projects.html">Project Island</a> </h3>
             </div>
             <div class="text four">
                 <h3> <a href="projects.html">Project Bakery</a> </h3>
             </div>
-            <div class="text six">
+            <div class="text seven">
                 <h3> <a href="projects.html">Tree Project</a> </h3>
             </div>
-            <div class="md-img plant seven">
-                <!-- Emtpy to put image in -->
+            <div class="md-img plant six">
+                <img src="images/pink-flowers.jpeg" alt="White flowers with pink accents on a tree branch">
             </div>
-            <div class="md-img travel nine">
-                <!-- Emtpy to put image in -->
+            <div class="md-img travel eight">
+                <img src="images/leaning-tower.jpeg" alt="Leaning tower of Pisa">
             </div>
-            <div class="md-img book eleven">
-                <!-- Emtpy to put image in -->
+            <div class="md-img book nine">
+                <img src="images/book.jpeg" alt="Open book on table">
             </div>
-            <div class="text eight">
+            <div class="text seven">
                 <h3> <a href="projects.html">Plant Project</a> </h3>
             </div>
             <div class="text ten">
                 <h3> <a href="projects.html">Travel Project</a> </h3>
             </div>
-            <div class="text twelve">
+            <div class="text eleven">
                 <h3> <a href="projects.html">Book Project</a> </h3>
             </div>
         </div>
@@ -75,10 +75,10 @@
     <footer>
             <div class="linkdin">
                 <p>Check out my LinkedIn Profile:</p>
-                <a href="https://www.linkedin.com/in/alexandria-duell/" target="_blank"> </a>
+                <a href="https://www.linkedin.com/in/alexandria-duell/" target="_blank"> <img src="images/LI-Logo.png" alt="LinkedIn Logo"> </a>
             </div>
             <div class="btm-btn">
-                <a href="contact.html">Contact <br> Me</a>
+                <a href="contact.html">Contact Me</a>
             </div>
     </footer>
 </body>
